Update release and build scripts